# dog-paddle

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pixi_commands.txt  pyproject.toml
challenges-today/: index.html
docs/: challenges-today.md  ideas.md  index.md  install-python.md  pixi-notes.md  rye-notes.md  rye_commands.txt  scenarios.md  unique-opportunity.md  user-personas-learners-creators.md  user-personas-packaging.md  users-consumers.md  users-producers.md  windows.md
ideas/: index.html
install-python/: index.html
pixi-notes/: index.html
rye-notes/: index.html
search/: search_index.json
unique-opportunity/: index.html
users-consumers/: index.html
users-producers/: index.html
windows/: index.html
